Minor adjustments, ready!

--- a/AcmeBlazor/Components/Pages/Home.razor
+++ b/AcmeBlazor/Components/Pages/Home.razor
@@ -2,5 +2,5 @@
 
 <PageTitle>Acme Customer Relations Management</PageTitle>
 
-<h1 style="text-align=center">Acme Customer Relations Management</h1>
+<h1 style="text-align:center">Acme Customer Relations Management</h1>
 
