--- a/AcmeBlazor/Components/Pages/Relations.razor
+++ b/AcmeBlazor/Components/Pages/Relations.razor
@@ -5,14 +5,18 @@
 
 <h1>Relations</h1>
 
+<p />
+
 <label>
-    Search: <InputText id="searchTextInput" @bind-Value="SearchText" /> <button class="btn btn-primary" @onclick="SearchRelationsAsync">Search</button>
+    Search: <InputText id="searchTextInput" @bind-Value="SearchText" class="input-lg control"/> <button class="btn btn-primary" @onclick="SearchRelationsAsync">Search</button>
 </label>
+
+<p />
 
 <div>
     <p hidden="@(!RelationsViewModel.IsLoading)">Searching...  Please wait.</p>
     
-    <table hidden="@(!RelationsViewModel.DataVisible)">
+    <table hidden="@(!RelationsViewModel.DataVisible)" class="table">
         <thead>
             <tr>
                 <th scope="col">Company name</th>
